# GPL_Torture

./: README.md
Haskell/: README.md  haskell.cabal  stack.yaml
Haskell/app/: Torture1.hs  Torture2.hs
backend/language/fortran/: .gitignore  configure.ac
backend/language/fortran/src/: gpltorture_fortran.f08
core/language/haskell/src/: README.md
core/src/language/fortran/: .gitignore  configure.ac
core/src/language/fortran/src/: Core_GPL_Torture.f08  Makefile.am  gpltorture_fortran.f08
frontend/: .gitignore  config.h  configure.ac
frontend/src/: Frontend_GPL_Torture.f08  Makefile.am  Makefile.in  f_libc_mod.f08  frontend_gpl_torture.f08  frontend_gpl_torture_mod.f08  gettimeofday_smod.f08  gpl-3_1.f08  gpl-3_2.f08  gpl-3_3.f08  gpl-3_3.inc  gpl3_mod.f08  gpl_torture.f08  gpl_torture_mod.f08  time_mod.f08
